tests/vendor/valid/trivial/add.c
//expect 3
//tags: trivial, binary
int main() {
    return 1 + 2;
}