tests/vendor/invalid/syntax/missing_open_paren.c
//tags: trivial
int main() {
    return 1 + 2);
}